# RunDown

./: .env.example  .gitignore  README.md  copy_project.sh  pyproject.toml  rundown.py  weekly_script_executor.sh
src/: auth.py  date_utils.py  generate_image.py  main.py
src/data_processors/: run_data_processor.py
src/image_generator/: generate_image.py  template_manager.py
src/strava_client/: auth.py
src/utils/: date_utils.py
